--- a/Sistema de Armazenamento de Questões/Views/Exam/Create.cshtml
+++ b/Sistema de Armazenamento de Questões/Views/Exam/Create.cshtml
@@ -19,16 +19,16 @@
             <textarea id="examDescription" name="Description" class="form-control" rows="3" placeholder="Digite a descrição da prova">@Model.Description</textarea>
         </div>
 
-        @if (Model.Questions != null && Model.Questions.Any())
+        @if (Model.ExamQuestions != null && Model.ExamQuestions.Any())
         {
             <div class="list-group">
-                @foreach (var question in Model.Questions)
+                @foreach (var examQuestion in Model.ExamQuestions)
                 {
                     <div class="list-group-item list-group-item-action mb-3 shadow-sm border-primary">
-                        <input type="checkbox" name="selectedQuestions" value="@question.Id" class="form-check-input me-2">
+                        <input type="checkbox" name="QuestionIds" value="@examQuestion.QuestionId" class="form-check-input me-2">
                         <label class="form-check-label">
-                            <h5 class="fw-bold">@question.Question</h5>
-                            <p class="mb-1 text-muted">Nível: <span class="fw-semibold">@question.Level</span></p>
+                            <h5 class="fw-bold">@examQuestion.Question.Question</h5>
+                            <p class="mb-1 text-muted">Nível: <span class="fw-semibold">@examQuestion.Question.Level</span></p>
                         </label>
                     </div>
                 }
